src/objects/Surgical_Notes_Form__c.object
<CustomObject>
    <fields>
        <fullName>Sinus_Communication_Right__c</fullName>
        <label>Sinus Communication Right</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Communication__c</fullName>
        <label>Sinus Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Lift_Left_Max_Type__c</fullName>
        <label>Sinus Lift Left Max Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Lift_Left_Max__c</fullName>
        <label>Sinus Lift Left Max</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Lift_Right_Max_Type__c</fullName>
        <label>Sinus Lift Right Max Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Lift_Right_Max__c</fullName>
        <label>Sinus Lift Right Max</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sutures_Other__c</fullName>
        <label>Sutures - Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sutures__c</fullName>
        <label>Sutures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3-O Chromic Gut</fullName>
                </value>
                <value>
                    <fullName>4-O Chromic Gut</fullName>
                </value>
                <value>
                    <fullName>3-O Silk</fullName>
                </value>
                <value>
                    <fullName>4-O Vicryl</fullName>
                </value>
                <value>
                    <fullName>PTFE 4.0</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Versed__c</fullName>
        <label>Versed</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vital_Signs__c</fullName>
        <label>Vital Signs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pre_op_BP_Diastolic__c</fullName>
        <label>Pre OP BP Diastolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Surgical Notes Form</label>
    <nameField>
        <displayFormat>SNF-{0000}</displayFormat>
        <label>Surgical Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgical Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>